<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_art"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/bottom_app_bar"
        tools:layout_editor_absoluteX="-24dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/textViewPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:text="@string/past_art_submissions"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/submitArtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add result"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TableLayout
        android:id="@+id/tableLayoutPastHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="48pt"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/textViewPS"
        app:layout_constraintBottom_toBottomOf="parent"
        android:stretchColumns="1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F3F3"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="114dp"
                android:layout_height="15dp"
                android:layout_column="1"
                android:text="@string/art_result"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/text_grey"
                android:textSize="12sp"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/timestamp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/text_grey"
                android:textSize="12sp"  />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewArtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>